# magic-wormhole-rs

./: Cargo.toml  README.md  deny.toml  timing.json
src/: message.rs
src/client/: bin.rs  client.rs  crypto.rs  words.rs
src/mailbox_server/: app.rs  bin.rs  server.rs
