[package]
name = "magic-wormhole-rs"
version = "0.1.0"
authors = ["Nick Hughes <nickjhughes@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "A Rust implementation of Magic Wormhole."
repository = "https://github.com/nickjhughes/magic-wormhole-rs.git"

[lib]
name = "magic_wormhole"
path = "src/lib.rs"

[[bin]]
name = "wormhole-mailbox"
path = "src/mailbox_server/bin.rs"

[[bin]]
name = "wormhole"
path = "src/client/bin.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crypto_secretbox = "0.1"
data-encoding = "2.4"
env_logger = "0.10"
futures = "0.3"
futures-channel = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
hex = "0.4"
hkdf = "0.12"
rustix = "0.37.25"
log = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["hex"] }
sha2 = "0.10"
spake2 = "0.3"
thiserror = "1.0"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.21"
