[package]
name = "magic-wormhole-rs"
version = "0.1.0"
authors = ["Nick Hughes <nickjhughes@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "A Rust implementation of Magic Wormhole."
repository = "https://github.com/nickjhughes/magic-wormhole-rs.git"

[lib]
name = "magic_wormhole"
path = "src/lib.rs"

[[bin]]
name = "wormhole-mailbox"
path = "src/mailbox_server/bin.rs"

[[bin]]
name = "wormhole"
path = "src/client/bin.rs"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
crypto_secretbox = "0.1.1"
data-encoding = "2.6.0"
env_logger = "0.11.5"
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = { version = "0.3.30", features = ["sink"] }
hex = "0.4.3"
hkdf = "0.12.4"
rustix = "0.38.37"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = { version = "3.9.0", features = ["hex"] }
sha2 = "0.10.8"
spake2 = "0.4.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.24.0"
